/**
 * Copyright 2018-2020 Polyaxon, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/

syntax = "proto3";

package v1;

import "google/protobuf/timestamp.proto";

import "v1/polyflow/stage.proto";

// stage condition specification
message StageCondition {
    // Status type
    Stages type = 1;

    // Status state
    string status = 2;

    // Status reason
    string reason = 3;

    // Status message
    string message = 4;

    // last update time
    google.protobuf.Timestamp last_update_time = 5;

    // last transition time
    google.protobuf.Timestamp last_transition_time = 6;
}

// Stage specification
message Stage {
  // The uuid of the stage
  string uuid = 1;

  // The current stage
  Stages stage = 2;

  // The stage conditions timeline
  repeated StageCondition stage_conditions = 3;
}

// Request data to create/update entity stage
message EntityStageBodyRequest {
    // Owner of the namespace
    string owner = 1;

    // Entity namespace
    string entity = 2;

    // Name of the version to apply the stage to
    string name = 3;

    // Stage to set
    StageCondition condition = 4;
}
